--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                echo 'testcaio'
                 sh 'mvn -B -DskipTests clean package'
             }
         }
