--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'testcaio'
+                echo 'testcaio2'
                 sh 'mvn -B -DskipTests clean package'
             }
         }
